 * Language and i18n:
   * Updated translations: British English, Czech, Dutch, Galician, Indonesian,
     Italian, Japanese, Korean, Latin, Old English, Swedish
 * User interface
   * Removed waypoints UI feature
   * Added an option to disable the "loading save from a different version"
     confirmation dialog.
   * Line-wrap author names in the add-on description dialog (bug #18691)
 * WML engine:
   * Readded the liminal alignment
   * Added four-difficulty versions of certain macros: QUANTITY4,
     ON_DIFFICULTY4, TURNS4, GOLD4, INCOME4, and ATTACK_DEPTH4.
   * added support for SSF to SUF via a [filter_side] subtag
   * added support for [enemy_of]<SSF> to SSF
   * added support for [allied_with]<SSF> to SSF
   * New [find_path] tag, a WML interface to the pathfinder.
 * Miscellaneous and bug fixes:
   * Fixed compilation on all Debian architectures (Debian bug #636193)
   * Fixed handling of #ifver and #ifnver preprocessor directives in wmllint
   * Made it possible to switch themes from Preferences in the main menu
     (bug #10969)
   * Fixed bug #18715 where deleting of .cache directory and then regenerating
     the cache F5 in a running instance of wesnoth caused a crash

Version 1.9.9:
 * AI:
   * Fixed bug #16117: added a way to supress E_NOT_REACHED_DESTINATION to lua
   * Fixed bug #16247: modify SoF 8 to let the dragon attack aggressively
     api via an optional boolean parameter - ai.move_full(from,to_x,to_y,true)
   * Fixed bug #18057: AI leaders should now attack when they should
   * Fixed bug #18122: AI leaders set to defensive will now follow goals anyway
   * Fixed bug #18356: AI leaders now won't move to avoided keeps
   * Applied patch #2846 by thonsew: let AI forget about invisible enemy units
     in villages during get_villages phase (bug #18101)
 * Campaigns:
   * Fixed remaining deprecation warnings about empty side=
   * Under the Burning Suns:
     * Fixed Naga Sentinel gaining an AMLA after 32 XP instead of the usual 150