@@ -139,6 +139,13 @@
 [/advanced_preference]
 
 [advanced_preference]
+    field=use_twelve_hour_clock_format
+    name= _ "Use 12-hour clock format"
+    type=boolean
+    default=no
+[/advanced_preference]
+
+[advanced_preference]
     field=confirm_load_save_from_different_version
     name=_"Confirm loading of saves from a different version"
     type=boolean
