@@ -3,7 +3,7 @@
     [panel]
         id=timeout-panel
         image=themes/status-bg.png
-        rect="+5,=,+70,="
+        rect="+5,=,+90,="
         xanchor=fixed
         yanchor=fixed
     [/panel]
@@ -23,7 +23,7 @@
         id=report_timeout
         font_size={FONT_SMALL_SIZE}
         ref=time-icon
-        rect="+0,=,+50,+20"
+        rect="+0,=,+60,+20"
         xanchor=fixed
         yanchor=fixed
     [/report_countdown]
