@@ -865,12 +865,12 @@
         [/change]
         [change]
             id=timeout-panel
-            rect="+5,=,+55,="
+            rect="+5,=,+75,="
         [/change]
         [change]
             id=report_timeout
             font_size={DEFAULT_FONT_TINY}
-            rect="+0,=,+35,+20"
+            rect="+0,=,+45,+20"
         [/change]
         [change]
             id=status-position
