@@ -23,6 +23,8 @@ Version 1.9.9+svn:
  * User interface:
    * Removed waypoints UI feature ('w' key) since the whiteboard provides
      similar functionality.
+   * Added option in advanced preferences that allows the twelve-hour clock
+      format to be used.
 
  * Miscellaneous and bug fixes:
    * Reintroduced the "Liminal" alignment. Liminal units fight best during
