@@ -212,8 +212,6 @@ namespace preferences {
 
 	std::string client_type();
 
-	std::string clock_format();
-
 	void set_theme(const std::string& theme);
 	std::string theme();
 
