@@ -18,6 +18,8 @@ Version 1.9.9+svn:
    * Added an option to disable the "loading save from a different version"
      confirmation dialog.
    * Line-wrap author names in the add-on description dialog (bug #18691)
+   * Added option in advanced preferences that allows the twelve-hour clock
+      format to be used.
  * WML engine:
    * Readded the liminal alignment
    * Added four-difficulty versions of certain macros: QUANTITY4,
